--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             applications to kickstart the sales process. </h4>
          
             <div class="two-btn">
-            <button class=""> <p class="ptag">Schedule a call </p><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <button class="btn-two"> <p class="ptag">Schedule a call </p><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.6667 1.1665L16.5 6.99984M16.5 6.99984L10.6667 12.8332M16.5 6.99984H1.5" stroke="white" stroke-width="1.90476" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 </button>
