--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <img src="assets/logo2.png" alt="Logo">
                     </div>
                     <ul class="nav-links">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Our Projects</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a  href="#section11">About</a></li>
+                        <li><a href="#section12">Services</a></li>
+                        <li><a href="#section7">Our Projects</a></li>
+                        <li><a href="#section14">Contact Us</a></li>
                     </ul>
                     <div class="box2">
-                    <a href="#" class="call-us-button">Call Us <span><svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a href="tel:+91 8050717122" style="text-decoration: none;" class="call-us-button">Call Us <span><svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0.5" y="1" width="20" height="20" rx="10" stroke="white"/>
                         <path d="M14.5211 13.7727L14.298 8.10815C14.2915 8.00261 14.2643 7.89775 14.2179 7.79958C14.129 7.60182 13.9682 7.44104 13.7705 7.35212C13.6723 7.30574 13.5675 7.27855 13.4619 7.27209L7.79738 7.04892C7.69175 7.04476 7.58797 7.06145 7.49198 7.09803C7.39598 7.1346 7.30964 7.19036 7.23789 7.26211C7.09299 7.40701 7.0163 7.60827 7.02471 7.8216C7.03311 8.03493 7.12592 8.24286 7.28271 8.39965C7.4395 8.55644 7.64743 8.64925 7.86076 8.65765L11.5935 8.79906L6.91933 13.4732C6.77502 13.6175 6.69864 13.8179 6.70701 14.0304C6.71539 14.2429 6.80781 14.4499 6.96396 14.6061C7.12012 14.7623 7.3272 14.8547 7.53966 14.863C7.75212 14.8714 7.95256 14.795 8.09687 14.6507L12.771 9.9766L12.9124 13.7093C12.9161 13.815 12.9408 13.9206 12.9849 14.02C13.029 14.1194 13.0918 14.2106 13.1695 14.2883C13.2472 14.366 13.3384 14.4287 13.4378 14.4729C13.5371 14.517 13.6427 14.5416 13.7485 14.5454C13.8542 14.55 13.9582 14.5336 14.0544 14.4972C14.1506 14.4607 14.2371 14.405 14.309 14.3332C14.3808 14.2613 14.4365 14.1748 14.4729 14.0786C14.5094 13.9824 14.5257 13.8785 14.5211 13.7727Z" fill="white"/>
                         </svg></span></a>
@@ -86,38 +86,7 @@
         </div>
 
         </div>
-     <!-- Popup Form -->
-     <div class="popup-form" id="popupForm">
-        <div class="form-container">
-          <!-- <button class="close-btn" onclick="closePopup()">&times;</button> -->
-          <div class="form-container1">
-           <button class="startbutton" onclick="closePopup()"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7852 0C6.15788 0 0.785156 5.37273 0.785156 12C0.785156 18.6273 6.15788 24 12.7852 24C19.4124 24 24.7852 18.6273 24.7852 12C24.7852 5.37273 19.4124 0 12.7852 0ZM16.8292 9.49854C17.0279 9.2928 17.1378 9.01723 17.1353 8.7312C17.1329 8.44517 17.0181 8.17155 16.8159 7.96929C16.6136 7.76703 16.34 7.6523 16.054 7.64981C15.7679 7.64733 15.4924 7.75728 15.2866 7.956L12.7852 10.4575L10.2837 7.956C10.1831 7.85181 10.0627 7.7687 9.9296 7.71152C9.7965 7.65435 9.65335 7.62426 9.5085 7.623C9.36365 7.62174 9.22 7.64934 9.08593 7.70419C8.95187 7.75905 8.83006 7.84005 8.72764 7.94248C8.62521 8.04491 8.5442 8.16671 8.48935 8.30078C8.4345 8.43485 8.4069 8.5785 8.40816 8.72335C8.40942 8.8682 8.43951 9.01134 8.49668 9.14444C8.55386 9.27754 8.63696 9.39791 8.74116 9.49854L11.2426 12L8.74116 14.5015C8.63696 14.6021 8.55386 14.7225 8.49668 14.8556C8.43951 14.9887 8.40942 15.1318 8.40816 15.2767C8.4069 15.4215 8.4345 15.5652 8.48935 15.6992C8.5442 15.8333 8.62521 15.9551 8.72764 16.0575C8.83006 16.16 8.95187 16.241 9.08593 16.2958C9.22 16.3507 9.36365 16.3783 9.5085 16.377C9.65335 16.3757 9.7965 16.3456 9.9296 16.2885C10.0627 16.2313 10.1831 16.1482 10.2837 16.044L12.7852 13.5425L15.2866 16.044C15.4924 16.2427 15.7679 16.3527 16.054 16.3502C16.34 16.3477 16.6136 16.233 16.8159 16.0307C17.0181 15.8284 17.1329 15.5548 17.1353 15.2688C17.1378 14.9828 17.0279 14.7072 16.8292 14.5015L14.3277 12L16.8292 9.49854Z" fill="black"/>
-            </svg></button>
-           </div>
-          <h2 class="f1-text">Book your appointment now</h2>
-          <p class="f2-text">We can discuss in details. Our team can reach out to you on time and discuss your vision. You will get a response within 24 hours.</p>
-          <form>
-            <label class="f3-text">Full Name</label>
-            <input type="text" placeholder="eg: John Doe">
-            <label class="f3-text">Email</label>
-            <input type="email" placeholder="eg: john@email.com">
-            <label class="f3-text">Phone Number</label>
-            <div>
-              <input type="text" placeholder="+971" style="width: 20%; margin-right: 5px;">
-              <input type="text" placeholder="543210987" style="width: 75%;">
-            </div>
-            <label class="f3-text">Available Date</label>
-            <select>
-              <option>Select</option>
-            </select>
-            <label class="f3-text">Share Your Message</label>
-            <textarea placeholder="Message"></textarea>
-            <button type="submit" class="lastbutton">Book Now</button>
-          </form>
-        </div>
-      </div>
-
+    
         <!--2 second container -->
 
 
@@ -272,6 +241,38 @@
                     </div>
                 </div>
             </div>
+ <!-- Popup Form -->
+ <div class="popup-form" id="popupForm">
+    <div class="form-container">
+      <!-- <button class="close-btn" onclick="closePopup()">&times;</button> -->
+      <div class="form-container1">
+       <button class="startbutton" onclick="closePopup()"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7852 0C6.15788 0 0.785156 5.37273 0.785156 12C0.785156 18.6273 6.15788 24 12.7852 24C19.4124 24 24.7852 18.6273 24.7852 12C24.7852 5.37273 19.4124 0 12.7852 0ZM16.8292 9.49854C17.0279 9.2928 17.1378 9.01723 17.1353 8.7312C17.1329 8.44517 17.0181 8.17155 16.8159 7.96929C16.6136 7.76703 16.34 7.6523 16.054 7.64981C15.7679 7.64733 15.4924 7.75728 15.2866 7.956L12.7852 10.4575L10.2837 7.956C10.1831 7.85181 10.0627 7.7687 9.9296 7.71152C9.7965 7.65435 9.65335 7.62426 9.5085 7.623C9.36365 7.62174 9.22 7.64934 9.08593 7.70419C8.95187 7.75905 8.83006 7.84005 8.72764 7.94248C8.62521 8.04491 8.5442 8.16671 8.48935 8.30078C8.4345 8.43485 8.4069 8.5785 8.40816 8.72335C8.40942 8.8682 8.43951 9.01134 8.49668 9.14444C8.55386 9.27754 8.63696 9.39791 8.74116 9.49854L11.2426 12L8.74116 14.5015C8.63696 14.6021 8.55386 14.7225 8.49668 14.8556C8.43951 14.9887 8.40942 15.1318 8.40816 15.2767C8.4069 15.4215 8.4345 15.5652 8.48935 15.6992C8.5442 15.8333 8.62521 15.9551 8.72764 16.0575C8.83006 16.16 8.95187 16.241 9.08593 16.2958C9.22 16.3507 9.36365 16.3783 9.5085 16.377C9.65335 16.3757 9.7965 16.3456 9.9296 16.2885C10.0627 16.2313 10.1831 16.1482 10.2837 16.044L12.7852 13.5425L15.2866 16.044C15.4924 16.2427 15.7679 16.3527 16.054 16.3502C16.34 16.3477 16.6136 16.233 16.8159 16.0307C17.0181 15.8284 17.1329 15.5548 17.1353 15.2688C17.1378 14.9828 17.0279 14.7072 16.8292 14.5015L14.3277 12L16.8292 9.49854Z" fill="black"/>
+        </svg></button>
+       </div>
+      <h2 class="f1-text">Book your appointment now</h2>
+      <p class="f2-text">We can discuss in details. Our team can reach out to you on time and discuss your vision. You will get a response within 24 hours.</p>
+      <form>
+        <label class="f3-text">Full Name</label>
+        <input type="text" placeholder="eg: John Doe">
+        <label class="f3-text">Email</label>
+        <input type="email" placeholder="eg: john@email.com">
+        <label class="f3-text">Phone Number</label>
+        <div>
+          <input type="text" placeholder="+971" style="width: 20%; margin-right: 5px;">
+          <input type="text" placeholder="543210987" style="width: 75%;">
+        </div>
+        <label class="f3-text">Available Date</label>
+        <select>
+          <option>Select</option>
+        </select>
+        <label class="f3-text">Share Your Message</label>
+        <textarea placeholder="Message"></textarea>
+        <button type="submit" class="lastbutton">Book Now</button>
+      </form>
+    </div>
+  </div>
+
 
 
             <!-- container-3 section-3 -->
@@ -614,7 +615,7 @@
 
           <!-- 11 section    -->
 
-          <div class="section11">
+          <div class="section11" id="section11">
             <div class="sec11-frist">
                 <h4 class="sec11-heading">Choose us for the following qualities.</h4>
                 <p class="sec11-text">Seekneo has the best talent pool in the industry, they have a collective experience that exceeds the industry standards. Quality approach and delivery have been the highest features in all the projects.</p>
@@ -680,7 +681,7 @@
 
             <!-- container-7 section-7 -->
        
-            <div class="section7">
+            <div class="section7" id="section7">
                 <h2 class="sec7-heading">Project demonstrations to prove our worth</h2>
                 <p class="sec7-text">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas risus quam enim. Semper lorem rhoncus et felis tristique tellus volutpat orci. Dui elementum a sed</p>
                 <div class="sec7-component">
@@ -1513,7 +1514,7 @@
 
            <!-- 12 section 12 container -->
 
-      <div class="section12">
+      <div class="section12" id="section12">
         <h2 class="sec12-heading">Seekneo’s other services</h2>
     <p class="sec12-text">Seekneo can help you to build website that is modern, clean, user friendly and SEO optimized which drives results.</p>
     <!-- <button class="btn12-sec12"><p class="btn-sec12">Get Started</p>  -->
@@ -1917,7 +1918,7 @@
 
        <!-- 14 section 14 container -->
 
-       <div class="section14">
+       <div class="section14" id="section14">
         <div class="sec14-frist">
         <div class="sec14-textcontent">
         <p class="sec14-text">Get in touch with us.</p>
