--- a/index.html
+++ b/index.html
@@ -2334,7 +2334,8 @@ accordionItems.forEach(item => {
     flatpickr("#datePicker", {
         enableTime: true, // Enables time selection
         dateFormat: "Y-m-d H:i", // Date format with time
-        time_24hr: true // 24-hour time format
+        time_24hr: true, // 24-hour time format
+        disableMobile: true
     });
 </script>
 <script>
