--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>seekneo e-commerce page </title>
+    <meta name="description" content="Top rated Ecommerce Web Designers in Bangalore, transform your online business with our professional ecommerce website development services. We create custom, high-performance solutions designed to enhance your brand and drive success.">
+    <meta name="keywords" content="Ecommerce Website Development Company in Bangalore, Ecommerce Web Development in Bangalore, Ecommerce Website Design Company in Bangalore, Ecommerce Website Developers in Bangalore, Best Ecommerce Website Development Company in Bangalore, Ecommerce Web Design Company Bangalore and Ecommerce Web Development Company Bangalore.">
+    <link rel="canonical" href="https://seekneo.com/ecommerce-website-development-company-in-bangalore/">
+    <title>Best Ecommerce Website Development Company in Bangalore |  Shopify E-commerce Website Developers in Bangalore | Seekneo </title>
     <link rel="stylesheet" href="style.css">
     
     <!-- Link the Google Font -->
@@ -19,6 +22,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
+    <header>
+        <h1>Best Ecommerce Website Development Company in Bangalore</h1>
+    </header>
+    
     <div class="container">
         <div class="section1">
             <nav class="navbar">
@@ -65,7 +72,7 @@
                 <img src="assets/Rectangle70.png" alt="Review">
             </div>
             <div class="Rimg5">
-               <h1 class="Rnum">475+</h1>
+               <h2 class="Rnum">475+</h2>
             </div>
             </div>
           <h4 class="creation">Channelize the sales process optimally through E-commerce
